# TEST01

./: LICENSE  README.md  main.py  pyproject.toml  test2.txt
src/config/: settings.py
src/models/: __init__.py
src/schemas/: __init__.py
